.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:32:38 **** Incremental Build of configuration Debug for project NVIC ****
make -j8 all 
arm-none-eabi-gcc "../Src/NVIC_program.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/NVIC_program.d" -MT"Src/NVIC_program.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/NVIC_program.o"
arm-none-eabi-gcc -o "NVIC.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\EME_Embedded_EUI\STM_F103C8T6_projects\NVIC\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="NVIC.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: NVIC.elf
 
arm-none-eabi-objdump -h -S  NVIC.elf  > "NVIC.list"
arm-none-eabi-objcopy  -O binary  NVIC.elf  "NVIC.bin"
arm-none-eabi-size   NVIC.elf 
   text	   data	    bss	    dec	    hex	filename
    556	      8	   1568	   2132	    854	NVIC.elf
Finished building: default.size.stdout
Finished building: NVIC.list
Finished building: NVIC.bin
 
 
 
12:33:52 **** Incremental Build of configuration Debug for project GPIO ****
make -j8 all 
arm-none-eabi-size   GPIO.elf 
   text	   data	    bss	    dec	    hex	filename
   1332	      8	   1568	   2908	    b5c	GPIO.elf
Finished building: default.size.stdout
 
12:33:53 **** Incremental Build of configuration Debug for project NVIC ****
make -j8 all 
arm-none-eabi-gcc "../Src/NVIC_program.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/NVIC_program.d" -MT"Src/NVIC_program.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/NVIC_program.o"
arm-none-eabi-gcc -o "NVIC.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\EME_Embedded_EUI\STM_F103C8T6_projects\NVIC\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="NVIC.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: NVIC.elf
 
arm-none-eabi-objdump -h -S  NVIC.elf  > "NVIC.list"
arm-none-eabi-objcopy  -O binary  NVIC.elf  "NVIC.bin"
arm-none-eabi-size   NVIC.elf 
   text	   data	    bss	    dec	    hex	filename
    556	      8	   1568	   2132	    854	NVIC.elf
Finished building: default.size.stdout
Finished building: NVIC.list
Finished building: NVIC.bin
 
 
 
12:33:53 **** Incremental Build of configuration Debug for project RCC ****
make -j8 all 
arm-none-eabi-size   RCC.elf 
   text	   data	    bss	    dec	    hex	filename
    788	      8	   1568	   2364	    93c	RCC.elf
Finished building: default.size.stdout
 
13:18:11 **** Incremental Build of configuration Debug for project GPIO ****
make -j8 all 
arm-none-eabi-size   GPIO.elf 
   text	   data	    bss	    dec	    hex	filename
   1332	      8	   1568	   2908	    b5c	GPIO.elf
Finished building: default.size.stdout
 
13:18:12 **** Incremental Build of configuration Debug for project NVIC ****
make -j8 all 
arm-none-eabi-gcc "../Src/NVIC_program.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/NVIC_program.d" -MT"Src/NVIC_program.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/NVIC_program.o"
../Src/NVIC_program.c: In function 'NVIC_voidSetPriority':
../Src/NVIC_program.c:75:6: error: expected expression before ')' token
   if()
      ^
make: *** [Src/subdir.mk:27: Src/NVIC_program.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
13:18:12 **** Incremental Build of configuration Debug for project RCC ****
make -j8 all 
arm-none-eabi-size   RCC.elf 
   text	   data	    bss	    dec	    hex	filename
    788	      8	   1568	   2364	    93c	RCC.elf
Finished building: default.size.stdout
 
13:23:34 **** Incremental Build of configuration Debug for project GPIO ****
make -j8 all 
arm-none-eabi-size   GPIO.elf 
   text	   data	    bss	    dec	    hex	filename
   1332	      8	   1568	   2908	    b5c	GPIO.elf
Finished building: default.size.stdout
 
13:23:34 **** Incremental Build of configuration Debug for project NVIC ****
make -j8 all 
arm-none-eabi-gcc "../Src/NVIC_program.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/NVIC_program.d" -MT"Src/NVIC_program.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/NVIC_program.o"
arm-none-eabi-gcc -o "NVIC.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\EME_Embedded_EUI\STM_F103C8T6_projects\NVIC\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="NVIC.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: NVIC.elf
 
arm-none-eabi-objdump -h -S  NVIC.elf  > "NVIC.list"
arm-none-eabi-objcopy  -O binary  NVIC.elf  "NVIC.bin"
arm-none-eabi-size   NVIC.elf 
   text	   data	    bss	    dec	    hex	filename
    556	      8	   1568	   2132	    854	NVIC.elf
Finished building: default.size.stdout
Finished building: NVIC.list
Finished building: NVIC.bin
 
 
 
13:23:35 **** Incremental Build of configuration Debug for project RCC ****
make -j8 all 
arm-none-eabi-size   RCC.elf 
   text	   data	    bss	    dec	    hex	filename
    788	      8	   1568	   2364	    93c	RCC.elf
Finished building: default.size.stdout
 
13:26:56 **** Incremental Build of configuration Debug for project GPIO ****
make -j8 all 
arm-none-eabi-size   GPIO.elf 
   text	   data	    bss	    dec	    hex	filename
   1332	      8	   1568	   2908	    b5c	GPIO.elf
Finished building: default.size.stdout
 
13:26:57 **** Incremental Build of configuration Debug for project NVIC ****
make -j8 all 
arm-none-eabi-gcc "../Src/NVIC_program.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/NVIC_program.d" -MT"Src/NVIC_program.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/NVIC_program.o"
arm-none-eabi-gcc -o "NVIC.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\EME_Embedded_EUI\STM_F103C8T6_projects\NVIC\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="NVIC.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: NVIC.elf
 
arm-none-eabi-objdump -h -S  NVIC.elf  > "NVIC.list"
arm-none-eabi-objcopy  -O binary  NVIC.elf  "NVIC.bin"
arm-none-eabi-size   NVIC.elf 
   text	   data	    bss	    dec	    hex	filename
    556	      8	   1568	   2132	    854	NVIC.elf
Finished building: default.size.stdout
Finished building: NVIC.list
Finished building: NVIC.bin
 
 
 
13:26:58 **** Incremental Build of configuration Debug for project RCC ****
make -j8 all 
arm-none-eabi-size   RCC.elf 
   text	   data	    bss	    dec	    hex	filename
    788	      8	   1568	   2364	    93c	RCC.elf
Finished building: default.size.stdout
 
